# Azimuthal-Reflectivity-Method-for-Anisotropic-Seismic-Modeling

./: .gitignore  LICENSE  Memo.md  README.md  SHARE_REPOSITORY.md  Stiffness_matrix_VTI.m  USER_GUIDE.md  build_python.sh  compare_cpp_vs_matlab_performance.m  compare_reflectivity_vs_convolution.m  compile_mex.m  compute_Rpp_VTI.m  compute_Rpp_aniso.m  compute_eig_VTI.m  compute_eig_aniso.m  replace_repository.sh
cpp/: CMakeLists.txt  build.sh
cpp/include/: azrm_core.hpp
cpp/src/: azrm_core.cpp  mex_interface.cpp  python_binding.cpp
cpp/test/: test_azrm.cpp
docs/: generate_screenshots.py
docs/assets/: ASSETS_README.md
webapp/: app.py  requirements.txt  seismic_plot.py  stiffness.py
